# genetic-evolution-of-the-weight-updating-policy

./: .gitignore  LICENSE  README.md  conda-env.yaml  conda-jax.yaml  conda.yaml  install-jax.sh  install-tf.sh  install.sh  pyproject.toml  train-conf.json
playground/: cloned_example_dense_neuron.py  dense_neuron_impl.lark  dense_neuron_impl_cloner.py  example_dense_neuron.py  train.py  vanilla_dense_neuron.py
playground/environment/: autogenerated_dataset.py  ds_iter.py
playground/learning/: evolvable.py  optimizers.py  stax.py
src/evolvable_neuron/: __init__.py
src/evolvable_neuron/agent/: __init__.py  a2c.py  a2c_agent.py  evaluator.py  types.py
src/evolvable_neuron/apps/: dense_impl_cloner.py  ppo_continuous_action.py  ppo_discrete_action.py  train.py
src/evolvable_neuron/apps/cfg/: rubiks_cube.yaml
src/evolvable_neuron/cloning/: __init__.py  cloner.py  dense_neuron_impl.lark  dense_neuron_with_memory_impl.lark  to_python.py
src/evolvable_neuron/learning/: optimizers.py  stax.py
src/evolvable_neuron/modules/: __init__.py  base.py  rubiks_cube.py
src/evolvable_neuron/networks/: __init__.py  base.py  layers.py  rubiks_cube.py
src/evolvable_neuron/rl/: .ppo_continuous_action.py.swp  compare.py  config.json  ppo_continuous_action.py  ppo_discrete_action.py  wrappers.py
tests/: conftest.py
tests/artificial_dataset/: __init__.py  ds_iter.py
tests/networks/: conftest.py  test_trainable.py
tests/test_modules/: conftest.py  test_trainable.py
