[project]
name = "evolvable-neuron"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]

authors = [
  {name = "Dimitrios Damopoulos", email = "dimdamop@hotmail.com"},
]

maintainers = [
  {name = "Dimitrios Damopoulos", email = "dimdamop@hotmail.com"},
]

description = "Experiments for the paper blah blah blah"
readme = "README.md"

dynamic = ["version"]
dependencies = [
    "jax",
    "numpy",
    "lark",
    "tensorflow",
]
requires-python = "== 3.11.8"

[tool.setuptools.dynamic]
version = {attr = "evolvable_neuron.__version__"}

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

[project.scripts]
evln-train = "evolvable_neuron.apps.train:main"
evln-clone = "evolvable_neuron.apps.dense_impl_cloner:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.flake8]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/artificial_dataset"]
